<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ventriloid</string>
    <string name="select_server">Select a Server:</string>
    <string name="connect">Connect</string>
    <string name="manage">Manage Servers</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete Server</string>
    <string name="edit">Edit Server</string>
    <string name="add">Add New Server</string>
    <string name="reset">Reset Servers</string>
    <string name="add2">Add Server</string>
    <string name="username">Username</string>
    <string name="phonetic">Phonetic</string>
    <string name="server_name">Server Name</string>
    <string name="hostname">Hostname / IP</string>
    <string name="port">Port</string>
    <string name="password">Password</string>
    <string name="required">*</string>
    <string name="required_field">( * ) = Required Field</string>
    <string name="colon">:</string>
    <string name="service_name">Ventriloid Service</string>
    <string name="user_status">User Microphone Status</string>
</resources>
