<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <TextView android:id="@+id/title"
    	android:text="@string/manage"
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"
    	android:textColor="@color/white"
    	android:textSize="20dp"
    	android:textStyle="bold"
    	android:shadowColor="@color/black"
    	android:shadowDx="0"
    	android:shadowDy="0"
    	android:shadowRadius="8"
    	android:background="@color/blue"
    	android:layout_alignParentTop="true"
    	android:paddingLeft="10dp"
    	android:paddingTop="5dp"
    	android:paddingBottom="5dp" />
    	
    <TextView android:id="@+id/selectText"
    	android:text="@string/select_server"
    	android:textColor="@color/black"
    	android:layout_height="wrap_content"
    	android:layout_width="wrap_content"
    	android:layout_below="@id/title"
    	android:layout_marginTop="20dp"
    	android:layout_marginLeft="20dp" />
    	
    <Spinner android:id="@+id/servers"
    	android:layout_below="@id/selectText"
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"
    	android:layout_marginLeft="10dp"
    	android:layout_marginRight="10dp" />
    	
    <LinearLayout android:id="@+id/buttonLayout"
    	android:layout_below="@id/servers"
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"
    	android:gravity="center_horizontal">
    	
    	<Button android:id="@+id/delete"
    		android:text="@string/delete"
    		android:layout_height="wrap_content"
    		android:layout_width="140dp" />
    		
    	<Button android:id="@+id/edit"
    		android:text="@string/edit"
    		android:layout_height="wrap_content"
    		android:layout_width="140dp" />
    	
    </LinearLayout>
    
    <Button android:id="@+id/reset"
    	android:text="@string/reset"
    	android:layout_alignParentBottom="true"
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"
    	android:layout_marginLeft="10dp"
    	android:layout_marginRight="10dp" />
    
    <Button android:id="@+id/add"
    	android:text="@string/add"
    	android:layout_above="@id/reset"
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"
    	android:layout_marginLeft="10dp"
    	android:layout_marginRight="10dp" />
    
</RelativeLayout>
